--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -11,7 +11,7 @@
         referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
     <title>Document</title>
 </head>
 <body>
