--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1198,6 +1198,227 @@ footer a:hover {
 
 
 /*********************************** footer styless part ******************************************/
+/******************* footer hover section ************************/
+.default-site-footer a:hover {
+    color: green;
+    text-shadow: -.1px .1px .1px black;
+}
+
+/*****************************************************************/
+.footer-text-box-2,
+.footer-text-box,
+.footer-copyright-box,
+.footer-container,
+.default-site-footer,
+.footer-content-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.default-site-footer-box {
+    gap: 2.8vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-container {
+    width: 73%;
+    height: 100%;
+    gap: 10vh;
+}
+
+.default-site-footer {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+}
+
+.footer-copyright {
+    width: 100%;
+    height: 5vh;
+    gap: .2vw;
+}
+
+.footer-text-box-2 {
+    gap: 2vh;
+}
+
+#small-logo-box {
+    width: 11vw;
+}
+
+.footer-copyright-box {
+    width: 100%;
+    height: min(5vh,3.2vw);
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+}
+
+.footer-content-box {
+    height: 33.7vh;
+    justify-content: start;
+    gap: 3vh;
+}
+.text-align-start {
+    text-align: start;
+}
+
+.text-align-end {
+    text-align: end;
+}
+
+.footer-content-box.text-align-center {
+    text-align: center;
+    align-items: center;
+    width: 25vw;
+}
+
+.footer-content-box.text-align-end,
+.footer-content-box.text-align-start {
+    width: 15vw;
+}
+
+.footer-form-container {
+    width: 72vw;
+    height: 30vh;
+    padding: min(7vh, 3.7vw);
+    display: flex;
+    border-radius: 30px;
+    justify-content: space-between;
+    align-items: center;
+    background-image: url('../img/defaults/footer-bg-img.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    transition: 250ms ease all;
+}
+
+.footer-form {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: min(.5vh, .3vw);
+}
+
+.footer-vertical-hr {
+    width: .1px;
+    height: 32vh;
+    background: #D4D4D4;
+}
+
+.footer-subscribe-text {
+    width: 17vw;
+    color: white;
+    font-family: 'Roboto';
+    font-size: min(4.89vh, 2.69vw);
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.footer-h1 {
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: min(3.1vh, 1.59vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer-social {
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5vw;
+}
+
+.footer-social-icon:hover {
+    cursor: pointer;
+    box-shadow: -3px 2px 10px #e0dddd;
+}
+
+.footer-social-icon {
+    padding: 1vw;
+    font-size: min(2vh, 1.1vw);
+    width: 3vw;
+    height: 3vw;
+    border-radius: 50%;
+    background-color: var(--clr-white-green);
+    color: var(--clr-blue);
+}
+.footer-cp-p,
+.footer-p {
+    color: #525C60;
+    font-family: 'Open Sans';
+    font-size: min(1.8vh, .9vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%; /* 29.772px */
+}
+.footer-cp-span,
+.footer-span {
+    color: #525C60;
+    font-family: 'Open Sans';
+    font-size: min(1.8vh, .9vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: 165.4%;
+}
+
+.footer-hr {
+    width: 100%;
+    height: .1px;
+    background-color: #D4D4D4;
+}
+
+.footer-form-button {
+    width: min(22vh, 11.5vw);
+    height: min(7.5vh, 4.3vw);
+    border-radius: min(1.5vh, .8vw);
+    background-color: var(--clr-blue);
+    color: white;
+    font-family: 'Roboto';
+    font-size: min(2vh, 1vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer-form-input:hover,
+.footer-form-button:hover {
+    box-shadow: -1px 3px 10px #fff;
+    /* text-shadow: -1px 1px 1px #afaaaa; */
+}
+
+.footer-form-input:focus{
+    outline: none;
+    color: #000;
+    background-color: rgb(241, 241, 241);
+    box-shadow: -1px 3px 10px #fff;
+    font-style: normal;
+    outline: 1px solid var(--clr-blue);
+}
+
+.footer-form-container:hover {
+    box-shadow: -1px 2px 10px #afaaaa;
+}
+
+.footer-form-input {
+    padding-left: min(2vh, 1vw);
+    width: min(34vh, 18vw);
+    height: min(7.5vh, 4.3vw);
+    border-radius: min(1.5vh, .8vw);
+    color: #D4D4D4;
+    font-family: 'Roboto';
+    font-size: min(1.8vh, .9vw);
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+}
 
 /******************* footer hover section ************************/
 .menu .select-box.parent{
