configured header and footer for mobile

--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -14,7 +14,7 @@
     <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
     <title>Document</title>
 </head>
-<body>
+<body id="organick">
     <header class="default-site-header">
         <!-- navigation bar -->
         <div class="header-nav-container">
@@ -93,7 +93,7 @@
         </div>
     </header>
     <!---------------------- all pages without header and footer --------------------------->
-    <main id="organick">
+    <main>
 
         <!---------------------------------- page-1 -------------------------------------->
 
