--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,26 +45,22 @@ button:hover {
 
 /*********** global hover effect section *************/
 header a,
-header label,
-header label + select,
 footer a {
     transition: 250ms ease all;
 }
 
-header label:hover,
-header label:hover + #pages,
-header .select-box:hover label,
 header a:hover,
 footer a:hover {
     cursor: pointer;
     color: green;
 }
-
+.site-logo-box-foot:hover .site-name-foot,
 .site-logo-box:hover .site-name {
     cursor: pointer;
     color: #038432b9;
 }
 
+.site-logo-box-foot:hover .site-logo-foot,
 .site-logo-box:hover .site-logo {
     /* filter: brightness(0) invert(1) drop-shadow(0px 0px 2px black) drop-shadow(0 0 10px var(--clr-black)) drop-shadow(0 0 2px var(--clr-green)); */
     filter: invert(25%) sepia(52%) saturate(416%) hue-rotate(151deg) brightness(50%) contrast(94%); /*drop-shadow(-2px 2px 10px var(--clr-green)) ;*/
@@ -94,14 +90,19 @@ footer a:hover {
 }
 
 /************ site logo style ***********/
-
+.site-logo-box-foot,
 .site-logo-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     gap: .5vw;
 }
 
+.site-logo-foot,
 .site-logo {
     width: 1.9vw;
     height: auto;
+    transition: .2s ease;
 }
 
 /****************************************/
@@ -129,18 +130,20 @@ footer a:hover {
     padding: 6vh 8vw;
 }
 
+.site-name-foot,
 .site-name {
     color: var(--clr-blue);
-    font-family: var(--ff-roboto);
+    font-family: 'Roboto';
     font-size: 2vw;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    transition: .2s ease;
 }
 
 .text-nav {
     color: var(--clr-blue);
-    font-family: var(--ff-roboto);
+    font-family: 'Roboto';
     font-size: max(.6rem, 1.1vw);
     font-style: normal;
     font-weight: 700;
@@ -149,19 +152,11 @@ footer a:hover {
 
 .select-text {
     color: var(--clr-blue);
-    font-family: var(--ff-roboto);
+    font-family: 'Roboto';
     font-size: .7vw;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-}
-
-#pages {
-    color: var(--clr-blue);
-    position: relative;
-    width: min(.6rem, .9vw);
-    height:  min(.6rem, .9vw);
-    background-color: transparent;
 }
 
 /************* search box ***************/
@@ -173,28 +168,37 @@ footer a:hover {
 .search-input {
     width: min(19.5vw, 37.5vh);
     height: min(6.5vh, 3.45vw);
+    font-size: 1vw;
     /* width: 19.5vw;
     height: 3.45vw; */
     background-color: var(--clr-search-background);
     border-radius: 5000px;
+    padding-left: 1vw;
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: max(.6rem, 1.1vw);
 }
 
-.search-input:hover {
+.search-input:hover,
+.search-input:focus {
+    outline: none;
     box-shadow: -2px 1px 10px #eae7e7ce;
 }
 
 .search-button {
     position: absolute;
-    right: min(.3vw, .5vh);
-    bottom: min(.4vh, .25vw);
-    /* right: .3vw;
-    bottom: .25vw; */
+    inset: 0;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: .3vw;
     width: min(2.93vw, 5.62vh);
     height: min(2.93vw, 5.62vh);
-    /* width: 2.93vw;
-    height: 2.93vw; */
     border-radius: 50%;
     background-color: var(--clr-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-icon {
@@ -215,9 +219,16 @@ footer a:hover {
     border: 1px solid #E0E0E0;
 }
 
+.text-nav-box-mobile .text-nav{
+    display: none;
+}
+.text-nav-box-mobile {
+    display: none;
+}
+
 .cart-count-text {
     color: var(--clr-blue);
-    font-family: var(--ff-roboto);
+    font-family: 'Roboto';
     font-size: min(1.9vh, 1vw);
     font-style: normal;
     font-weight: 400;
@@ -1433,9 +1444,9 @@ footer a:hover {
     position: relative;
 }
 
-.touch .menu__link {
+.touch .text-nav-box-mobile .menu__link {
     width: 32px;
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: end;
 }
@@ -1555,6 +1566,9 @@ body.touch .arrow {
 }
 @media (max-width: 767.98px) {
     /***************** header-section ****************/
+    .touch .text-nav-box-mobile .menu__link {
+        display: flex;
+    }
     .header-nav-container {
         width: 100%;
         height: 100px;
